# entrega-individual-RicardCRosas

./: .gitignore  README.md
Go_To_Goal_Metrics/: analysis.md  build_dashboard_dom.py  build_dom.py  draw_markers.py  extract_summary.py  extract_summary_std.py  package.xml  run_cases.sh  setup.cfg  setup.py  statistics_dom.html  turtlesim_execution_dom.html
Go_To_Goal_Metrics/go_to_goal_metrics/: plot_metrics.py  turtle_go_to_goal_metrics.py
Go_To_Goal_Metrics/resource/: go_to_goal_metrics
